--- a/m3/css/styles.css
+++ b/m3/css/styles.css
@@ -1,6 +1,6 @@
 /* Body styles */
 body {
-  background-color: #ffffff;
+  background-color: #ffb7dd;
 }
 
 a, a:hover {
@@ -11,7 +11,7 @@ a, a:hover {
 /* Header and navbar styles */
 
 #header-nav {
-  background-color: #999999;
+  background-color: #ff0088;
   border-radius: 0;
   border: 0;
 }
